--- a/ss6_css/bai_tap/tao_trang_doc_truyen_ngan/tao_trang_doc_truyen_ngan.html
+++ b/ss6_css/bai_tap/tao_trang_doc_truyen_ngan/tao_trang_doc_truyen_ngan.html
@@ -6,11 +6,10 @@
     <title>bài tập 3</title>
 </head>
 <body>
-<h1 style="text-align: center">NHÀ GIẢ KIM</h1>
 <div id="mucluc">
-    <img src="https://isach.info/images/story/cover/nha_gia_kim__paulo_coelho.jpg" height="300px">
-    <div style="text-align: center">
-        <p><b>MỤC LỤC</b></p>
+    <img src="https://isach.info/images/story/cover/nha_gia_kim__paulo_coelho.jpg" height="300px" alt="book-cover">
+    <div style="text-align: center" >
+        <p style="font-family: arial, sans-serif"><b>MỤC LỤC</b></p>
         <h5><a href="#c1">Chương 1</a></h5>
         <h5><a href="#c2">Chương 2</a></h5>
         <h5><a href="#c3">Chương 3</a></h5>
@@ -18,15 +17,16 @@
     </div>
 </div>
 <div id="noidung">
+    <h1>NHÀ GIẢ KIM</h1>
     <p id="c1" style="font-style: italic"> Chương 1 </p>
     <p>Nhà luyện kim đan cầm lấy quyển sách mà một người trong đoàn lữ hành mang theo. Quyển sách đã cũ và long gáy
-        nhưng ông vẫn đọc được tên tác giả : Oscar Wilde. Mở ra đọc, ông thấy có một câu chuyện về hoa thủy tiên. Dĩ nhiên,
-        ông không lạ gì truyền thuyết về chàng Narziss xinh trai, ngày ngày soi mặt trên hồ nước để tự chiêm ngưỡng sắc đẹp
-        của mình.<br>
+        nhưng ông vẫn đọc được tên tác giả : Oscar Wilde. Mở ra đọc, ông thấy có một câu chuyện về hoa thủy tiên. Dĩ
+        nhiên, ông không lạ gì truyền thuyết về chàng Narziss xinh trai, ngày ngày soi mặt trên hồ nước để tự chiêm ngưỡng sắc
+        đẹp của mình.<br>
         Chàng say mê chính mình đến nỗi một ngày kia nghiêng quá đà, ngã xuống hồ và chết đuối. Thế là từ nơi đó mọc
-        lên một bông hoa đẹp, mang tên chàng Narziss nọ. Nhưng Oscar Wilde không kết thúc câu chuyện như thế mà kể rằng sau
-        khi chàng chết, những nàng tiên trong rừng hiện ra, thấy hồ nước ngọt kia giờ đã biến thành một đầm lầy mặn vì nước
-        mắt.
+        lên một bông hoa đẹp, mang tên chàng Narziss nọ. Nhưng Oscar Wilde không kết thúc câu chuyện như thế mà kể rằng
+        sau khi chàng chết, những nàng tiên trong rừng hiện ra, thấy hồ nước ngọt kia giờ đã biến thành một đầm lầy mặn vì
+        nước mắt.
         "Vì sao em khóc ?" – các nàng tiên hỏi.<br>
         "Vì em thương tiếc chàng Narziss", hồ nước đáp.<br>
         "Phải rồi. Các chị chẳng ngạc nhiên tí nào. Và tuy tất cả chúng ta đều theo đuổi chàng nhưng chỉ mình em được
@@ -35,11 +35,11 @@
         "Còn ai biết điều này rõ hơn là em chứ ?" – các nàng tiên ngạc nhiên – "ngày nào mà chàng chẳng cúi người
         soi mình trên mặt hồ".<br>
         Nghe thế, hồ nước im lăng hồi lâu rồi mới đáp : "Đúng là em khóc chàng Narziss, nhưng em chưa bao giờ để ý
-        rằng chàng đẹp trai đến thế. Em khóc chàng vì mỗi lần chàng soi người trên mặt hồ thì em mới thấy được sắc đẹp của
-        chính em hiện lên rõ trong đôi mắt chàng".<br>
+        rằng chàng đẹp trai đến thế. Em khóc chàng vì mỗi lần chàng soi người trên mặt hồ thì em mới thấy được sắc đẹp
+        của chính em hiện lên rõ trong đôi mắt chàng".<br>
         "Quả là một câu chuyện tuyệt vời", nhà luyện kim đan nói.
     </p>
-    <p id="c2" style="font-style: italic"> Chương 2 </p>
+    <p id="c2" style="font-style: italic" > Chương 2 </p>
     <p>Khi cậu chăn cừu Santiago xua được đàn cừu về đến ngôi nhà thờ cổ và hoang phế thì trời đã sẩm tối. Ngôi nhà
         thờ này đã bị sập mái từ khá lâu rồi và nơi xưa kia là phòng thay áo lễ nay sừng sững một cây dâu tằm to tướng.
         Cậu quyết định ngủ qua đêm tại đấy. Thế là cậu lùa lũ cừu qua khung cửa đã hư hại rồi chắn lại bằng vài
@@ -67,13 +67,13 @@
         ngay trước cửa hàng để khỏi bị lọc lừa. Lần đó một người quen đã giới thiệu với cậu cửa hàng này và giờ đây cậu
         lại dẫn bầy cừu đến đó.
     </p>
-    <p id="c3" style="font-style: italic"> Chương 3 </p>
+    <p id="c3" style="font-style: italic" > Chương 3 </p>
     <p>"Tôi muốn bán lông cừu", lần đó cậu đã nói với ông nhà buôn kia như thế.<br>
-        Cửa tiệm đang đầy khách hàng nên ông ta yêu cầu chàng chăn cừu đợi đến xế trưa. Thế là cậu ngồi ngay xuống lề đường
-        trước cửa hiệu, lôi trong bị ra một quyển sách.<br>
+        Cửa tiệm đang đầy khách hàng nên ông ta yêu cầu chàng chăn cừu đợi đến xế trưa. Thế là cậu ngồi ngay xuống lề
+        đường trước cửa hiệu, lôi trong bị ra một quyển sách.<br>
         "Mình không biết là chăn cừu mà cũng đọc được sách đấy", một giọng con gái cất lên ngay cạnh cậu.<br>
-        Đúng là một cô gái đất Andalusia (Andalusia : vùng phía nam Tây Ban Nha, sát Đại Tây Dương và Địa Trung Hải), với
-        mái tóc đen dài và đôi mắt phảng phất nét người Mauren (Người Mauren (tiếng Anh : Moor) : một sắc dân du mục ở
+        Đúng là một cô gái đất Andalusia (Andalusia : vùng phía nam Tây Ban Nha, sát Đại Tây Dương và Địa Trung Hải),
+        với mái tóc đen dài và đôi mắt phảng phất nét người Mauren (Người Mauren (tiếng Anh : Moor) : một sắc dân du mục ở
         Bắc Phi, đã đô hộ Tây Ban Nha từ thế kỉ VIII đến thế kỉ XV) xâm lược xưa kia.<br>
         "Bởi vì giống cừu còn dạy tôi biết được nhiều điều hơn là sách vở", cậu đáp.<br>
         Hai người trò chuyện tíu tít suốt hơn hai tiếng. Cô gái cho biết mình là con người chủ tiệm kia và kể về cuộc
@@ -83,24 +83,24 @@
         "Anh học đọc sách như thế nào ?", cô muốn biết.<br>
         "Trong trường học, như mọi người khác", cậu đáp.<br>
         "Nhưng nếu anh đọc sách được thì sao anh chỉ thành một người chăn cừu bình thường thôi ?".<br>
-        Cậu bối rối vì tin chắc rằng cô sẽ không hiểu nổi cậu. Để tránh né trả lời, cậu tiếp tục kể về hành trình của mình
-        và đôi mắt nhỏ phảng phất mắt người Mauren của cô gái khi tròn xoe, lúc nheo lại vì kinh ngạc.<br>
-        Thời gian trôi qua, còn cậu thầm ước ngày hôm ấy đừng bao giờ chấm dứt, hoặc là bố cô cứ tiếp tục để cậu chờ thêm
-        ba ngày nữa.<br>
-        Cậu thấy một cảm giác khác lạ chưa từng biết đến : đó là mơ ước được sống ổn định một nơi. Có cô gái này bên cạnh
-        thì chẳng còn ngày nào là nhàm chán nữa.<br>
+        Cậu bối rối vì tin chắc rằng cô sẽ không hiểu nổi cậu. Để tránh né trả lời, cậu tiếp tục kể về hành trình của
+        mình và đôi mắt nhỏ phảng phất mắt người Mauren của cô gái khi tròn xoe, lúc nheo lại vì kinh ngạc.<br>
+        Thời gian trôi qua, còn cậu thầm ước ngày hôm ấy đừng bao giờ chấm dứt, hoặc là bố cô cứ tiếp tục để cậu chờ
+        thêm ba ngày nữa.<br>
+        Cậu thấy một cảm giác khác lạ chưa từng biết đến : đó là mơ ước được sống ổn định một nơi. Có cô gái này bên
+        cạnh thì chẳng còn ngày nào là nhàm chán nữa.<br>
         Nhưng rồi ông nhà buôn đến, bảo xén cho lông bốn con cừu, trả tiền ngay rồi bảo cậu sang năm trở lại.
     </p>
     <p id="c4" style="font-style: italic"> Chương 4 </p>
     <p>
-        Bây giờ chỉ còn có bốn ngày đường nữa là đến thành phố kia. Cậu nao nức nhưng lòng lại bồn chồn : biết đâu cô gái
-        đã quên cậu lâu rồi.<br>
+        Bây giờ chỉ còn có bốn ngày đường nữa là đến thành phố kia. Cậu nao nức nhưng lòng lại bồn chồn : biết đâu cô
+        gái đã quên cậu lâu rồi.<br>
         Thiếu gì người chăn cừu đi qua đấy để bán lông cừu.<br>
         "Chẳng cần", cậu nói to với bầy cừu, "bề gì tao cũng quen khối con gái ở bao thành phố khác".<br>
         Nhưng trong thâm tâm cậu biết mình không thể chẳng cần, vì rằng bất cứ người chăn cừu, người thủy thủ hay người
-        khách thương nay đây mai đó nào cũng có ở đâu đó một kẻ khiến cho họ quên mất thú vui được tự do giang hồ đi cùng trời cuối đất.
+        khách thương nay đây mai đó nào cũng có ở đâu đó một kẻ khiến cho họ quên mất thú vui được tự do giang hồ đi
+        cùng trời cuối đất.
     </p>
-
 </div>
 </body>
 </html>
